# aiml

Class 1 Python AI/: OOPS.py  Python_foundamentals.py  currency.py  functions or tools.py  notebook.ipynb  tools.py
Class 1 Python AI/my-first-project/: main.py  pyproject.toml  requirements.txt
Class 4 & 5 and 6.5  - Agents in Python/Project 0/: README.md  _03_structuring_with_pydantic.py  _05_teaching_it_to_choose.py  _06_project_zero_agent.py  output
Class 4 - Agents in Python/Project 0/: _01_ai_model_vs_chatbot_vs_agent.py  _02_calling_the_ai_paid_and_free.py  _04_giving_it_a_tool.py  _05_teaching_it_to_choose.py  _06_project_zero_agent.py  _07_streamlit_app.py  pyproject.toml
Class 6  - Langchain Starts/: .example.env  .gitignore  langchain_agents.py  langchain_basics.py  main.py  pyproject.toml
class2v2/: Python_run.ipynb  README.md  _0_basics_refresher.py  _10_tool_with_ai_call.py  _11_agent_class_ai_only.py  _12_agent_with_one_tool.py  _13_agent_with_more_tools.py  _14_agent_with_memory.py  _1_data_structures.py  _2_oop_classes.py  _3_error_handling.py  _4_decorators.py  _5_calling_a_real_api.py  _6_fake_ai_call.py  _7_ai_call_free_and_paid.py  _8_pydantic_with_ai.py  _9_api_call_with_structure.py  pyproject.toml
class2v2/8_Pydantic/: 1. Why Pydantic.py  Pydantic_From_Scratch.ipynb  main.py  pyproject.toml  test.ipynb
