[project]
name = "class-6-langchain-starts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.12",
    "dotenv>=0.9.9",
    "langchain>=1.3.13",
    "langchain-anthropic>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.5",
]
