[project]
name = "agentic-ai-3-class2-v2-pydantic"
version = "0.1.0"
description = "Class 2 (expanded) -- basics through agent+tools+memory. Free real currency API, free real LLM (Groq/OpenRouter), optional paid OpenAI shown not required."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Only needed for the real AI calls in _7, _10, _11, _12, _13, _14 --
# every one of those falls back automatically to _6's stand-in if this
# isn't installed or no key is set.
real-llm = ["openai>=1.50.0"]

[tool.uv.workspace]
members = [
    "8_Pydantic",
]
